--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["translang", "translating", "tiny_daemon"]
+members = ["transtools", "translating", "tiny_daemon"]
 
 [workspace.package]
 edition = "2024"
