--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ constcat = "0.6"
 const_format = "0.2.34"
 dotenv = "0.15"
 env_logger = "0.11"
+formatx = "0.2"
 foreign-types-shared = "0.3.1"
 futures-util = "0.3"
 gettext-rs = "0.7.2"
