--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2024"
 rust-version = "1.85"
 authors = ["Pierre-Luc Rigaux <plrigaux@users.noreply.github.com>"]
 license = "GPL-3.0-or-later"
-#members = ["translang", "translating"]
 
 [package]
 name = "sysd-manager"
@@ -61,7 +60,7 @@ env_logger = "0.11"
 formatx = "0.2"
 foreign-types-shared = "0.3.1"
 futures-util = "0.3"
-gettext-rs = "0.7.2"
+gettext-rs = { version ="0.7.2", features = ["gettext-system"]}
 libc = "0.2"
 libsysd = { version = "0.9", package = "libsystemd-sys"} 
 log.workspace = true
