--- a/sysd-manager-translating/Cargo.toml
+++ b/sysd-manager-translating/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sysd-manager-translating"
-version = "0.0.0"
+version = "0.1.0"
 authors = { workspace = true }
 edition = { workspace = true }
 rust-version = { workspace = true }
@@ -9,3 +9,7 @@ license = { workspace = true }
 readme = "README.md"
 description = "Simple lib used by sysd-manager to generate mo file"
 repository = { workspace = true }
+
+
+[dependencies]
+log.workspace = true
