--- a/tiny_daemon/Cargo.toml
+++ b/tiny_daemon/Cargo.toml
@@ -16,7 +16,7 @@ anstyle = "1"
 axum = "0.8"
 clap.workspace = true
 env_logger = "0.11"
+libc.workspace = true
 log.workspace = true
-libc = "0.2"
 signal-hook = "0.3"
 tokio.workspace = true
