--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ __pycache__/
 data/schemas/gschemas.compiled
 /po/*.mo
 .weblate
-/data/applications/io.github.plrigaux.sysd-manager.desktop
+data/applications/io.github.plrigaux.sysd-manager.desktop
+
