--- a/packaging/flathub/io.github.plrigaux.sysd-manager.yaml
+++ b/packaging/flathub/io.github.plrigaux.sysd-manager.yaml
@@ -34,7 +34,7 @@ modules:
   - cargo --offline fetch --manifest-path Cargo.toml --verbose
   - cargo --offline build --release --verbose --features flatpak
   - install -Dm755 ./target/release/sysd-manager -t /app/bin/  
-  - install -Dm644 ./target/locale/io.github.plrigaux.sysd-manager.desktop" -t "/app/share/applications"
+  - install -Dm644 ./target/locale/io.github.plrigaux.sysd-manager.desktop -t /app/share/applications
   - install -Dm644 ./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps/
   - install -Dm644 ./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml -t /app/share/glib-2.0/schemas
   - install -Dm644 ./data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml -t /app/share/metainfo
