extract desktop and meta info out from build rs

--- a/packaging/flathub/io.github.plrigaux.sysd-manager.yaml
+++ b/packaging/flathub/io.github.plrigaux.sysd-manager.yaml
@@ -33,6 +33,11 @@ modules:
   build-commands:
   - cargo --offline fetch --manifest-path Cargo.toml --verbose
   - cargo --offline build --release --verbose --features flatpak
+  - echo ""
+  - echo Generating files
+  - echo ""
+  - cargo --offline run -p transtools -- packfiles
+  - echo ""
   - install -Dm755 ./target/release/sysd-manager -t /app/bin/  
   - install -Dm644 ./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps/
   - install -Dm644 ./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml -t /app/share/glib-2.0/schemas
