--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,9 +53,9 @@ constcat = "0.6"
 
 [dependencies]
 pango = { version = "0", package = "pango", features = ["v1_56"] }
-adw = { version = "0.7.2", package = "libadwaita", features = ["v1_7"] }
+adw = { version = "0.8", package = "libadwaita", features = ["v1_7"] }
 gio = { version = "0", package = "gio", features = ["v2_84"] }
-gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
+gtk = { version = "0.10", package = "gtk4", features = ["v4_18"] }
 bitflags = "2.9"
 chrono = "0.4"
 clap.workspace = true
@@ -68,11 +68,11 @@ foreign-types-shared = "0.3.1"
 futures-util = "0.3"
 gettext-rs = { version ="0.7.2", features = ["gettext-system"]}
 libc.workspace = true
-libsysd = { version = "0.9", package = "libsystemd-sys"} 
+#libsysd = { version = "0.9", package = "libsystemd-sys"} 
 log.workspace = true
 regex = "1.11"
 serde = "1.0"
-sourceview5 = "0.9"
+sourceview5 = "0.10"
 strum = { version = "0.27", features = ["derive"] }
 sysd =  { version = "0.10", package = "systemd"} 
 tokio.workspace = true
@@ -86,7 +86,7 @@ zvariant = "5.5"
 [build-dependencies]
 #glib-build-tools = "0.19.0"
 #cargo-generate-rpm = "0.14.1"
-quick-xml =  "0.37"
+quick-xml =  "0.38"
 translating = { version = "0.4.1", path = "./sysd-manager-translating", package = "sysd-manager-translating"}
 
 [package.metadata.generate-rpm]
