--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -10,7 +10,7 @@ url="https://github.com/plrigaux/sysd-manager"
 license=('GPLv3+')
 groups=()
 depends=("gtk4" "libadwaita" "systemd-libs" "gtksourceview5" "gettext")
-makedepends=(rust>=1.89 git)
+makedepends=(rust git)
 checkdepends=()
 optdepends=()
 provides=()
