save column in toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,11 +73,13 @@ libc.workspace = true
 log.workspace = true
 regex = "1.11"
 serde = "1.0"
+#serde = { version = "1.0", features = ["derive"] }
 sourceview5 = "0.10"
 strum = { version = "0.27", features = ["derive"] }
 sysd = { version = "0.10", package = "systemd" }
 tokio.workspace = true
 tokio-util = "0.7"
+toml = "0.9"
 zbus = { version = "5.11", default-features = false, features = [
     "tokio",
     "blocking-api",
@@ -87,7 +89,6 @@ zbus_xml = "5"
 zvariant = "5"
 zvariant_derive =  "5"
 zvariant_utils =  "3"
-
 
 
 [dev-dependencies]
