--- a/packaging/flathub/io.github.plrigaux.sysd-manager.yaml
+++ b/packaging/flathub/io.github.plrigaux.sysd-manager.yaml
@@ -14,7 +14,7 @@ finish-args:
 - --filesystem=host-os
 - --filesystem=host-etc
 #- --filesystem=xdg-config
-- --filesystem=xdg-config/sysd-manager:rw
+#- --filesystem=xdg-config/sysd-manager:rw
 # Needed to access journal logs
 - --filesystem=/var/log:ro
 #- --env=RUST_LOG=info
