--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -3,28 +3,28 @@
 pkgname=sysd-manager
 pkgver=
 pkgrel=1
-epoch=
+#epoch=
 pkgdesc="A systemd GUI to manage your Services, Timers, Sockets and other units. You can enable, disable, stop and start them. Also, you can view their config file and peak at their journal logs."
-arch=('x86_64' 'aarch64')
+arch=("x86_64" "aarch64")
 url="https://github.com/plrigaux/sysd-manager"
-license=('GPLv3+')
-groups=()
+license=("GPL-3.0-or-later")
+#groups=()
 depends=("gtk4" "libadwaita" "systemd-libs" "gtksourceview5" "gettext")
-makedepends=(rust cargo git)
-checkdepends=()
-optdepends=()
-provides=()
-conflicts=()
-replaces=()
-backup=()
-options=()
+makedepends=("rust" "cargo" "git")
+#checkdepends=()
+#optdepends=()
+#provides=()
+#conflicts=()
+#replaces=()
+#backup=()
+#options=()
 install=$pkgname.install
-changelog=CHANGELOG.md
-_commit=
+#changelog=CHANGELOG.md
+#_commit=
 source=("https://github.com/plrigaux/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
-noextract=()
-sha256sums=()
-validpgpkeys=()
+#noextract=()
+#sha256sums=()
+#validpgpkeys=()
 _pkgsrcdir=$pkgname-$pkgver
 
 prepare() {
