--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -1,36 +1,36 @@
 
 # Maintainer: Pierre-Luc Rigaux 
+# Contributor: Pierre-Luc Rigaux 
 pkgname=sysd-manager
 pkgver=
 pkgrel=1
-#epoch=
-pkgdesc="A systemd GUI to manage your Services, Timers, Sockets and other units. You can enable, disable, stop and start them. Also, you can view their config file and peak at their journal logs."
+pkgdesc="A systemd GUI to manage service, timer, socket and other units."
 arch=("x86_64" "aarch64")
 url="https://github.com/plrigaux/sysd-manager"
 license=("GPL-3.0-or-later")
-#groups=()
+groups=()
 depends=("gtk4" "libadwaita" "systemd-libs" "gtksourceview5" "gettext")
 makedepends=("rust" "cargo" "git")
-#checkdepends=()
-#optdepends=()
-#provides=()
-#conflicts=()
-#replaces=()
-#backup=()
-#options=()
+checkdepends=()
+optdepends=()
+provides=()
+conflicts=()
+replaces=()
+backup=()
+options=()
 install=$pkgname.install
-#changelog=CHANGELOG.md
-#_commit=
-source=("https://github.com/plrigaux/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
-#noextract=()
-#sha256sums=()
-#validpgpkeys=()
+changelog=CHANGELOG.md
+_commit=
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/plrigaux/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
+noextract=()
+sha256sums=()
+validpgpkeys=()
 _pkgsrcdir=$pkgname-$pkgver
 
 prepare() {
 	cd $_pkgsrcdir
-    export RUSTUP_TOOLCHAIN=stable
-    cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
+	export RUSTUP_TOOLCHAIN=stable
+	cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
