--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -10,7 +10,7 @@ url="https://github.com/plrigaux/sysd-manager"
 license=("GPL-3.0-or-later")
 groups=()
 depends=("gtk4" "libadwaita" "systemd-libs" "gtksourceview5" "gettext")
-makedepends=("rust" "cargo" "git")
+makedepends=("cargo" "git")
 checkdepends=()
 optdepends=()
 provides=()
