--- a/sysd-manager-proxy/Cargo.toml
+++ b/sysd-manager-proxy/Cargo.toml
@@ -20,3 +20,8 @@ libc.workspace = true
 log.workspace = true
 tokio.workspace = true
 zbus.workspace = true
+env_logger.workspace = true
+dotenv.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+tracing-journald.workspace = true
