--- a/sysd-manager-proxy/data/org.zbus.MyGreeter.conf
+++ b/sysd-manager-proxy/data/org.zbus.MyGreeter.conf
@@ -6,8 +6,15 @@ Configuration 1.0//EN"
 	<policy context="default"> 
 		<allow own="org.zbus.MyGreeter"/> 
 
+<!--
 		<allow send_destination="org.zbus.MyGreeter"
 			send_interface="org.zbus.MyGreeter1"
 			send_member="SayHello"/>
+
+		
+-->
+<allow send_destination="org.zbus.MyGreeter"
+			send_interface="org.zbus.MyGreeter1"/>
 	</policy> 
 </busconfig> 
+<!-- io.github.plrigaux.sysd-manager -->
