--- a/sysd-manager-proxy/data/org.zbus.MyGreeter.conf
+++ b/sysd-manager-proxy/data/org.zbus.MyGreeter.conf
@@ -1,20 +1,28 @@
-<?xml version="1.0" encoding="UTF-8"?> <!-- -*- XML -*- -->
+<?xml version="1.0" encoding="UTF-8"?> <!--*-nxml-*-->
 <!DOCTYPE busconfig PUBLIC "-//freedesktop//DTD D-BUS Bus 
-Configuration 1.0//EN" 
-"http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd"> 
-<busconfig> 
-	<policy context="default"> 
-		<allow own="org.zbus.MyGreeter"/> 
+Configuration 1.0//EN" "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
+<busconfig>
+	<policy context="default">
+		<allow own="org.zbus.MyGreeter" />
 
-<!--
+		<!--
 		<allow send_destination="org.zbus.MyGreeter"
 			send_interface="org.zbus.MyGreeter1"
 			send_member="SayHello"/>
 
 		
 -->
-<allow send_destination="org.zbus.MyGreeter"
-			send_interface="org.zbus.MyGreeter1"/>
-	</policy> 
-</busconfig> 
+		<allow send_destination="org.zbus.MyGreeter"
+			send_interface="org.zbus.MyGreeter1" />
+	</policy>
+
+	<policy context="default">
+		<allow own="org.freedesktop.systemd1" />
+
+		<allow send_destination="org.freedesktop.systemd1"
+			send_interface="org.freedesktop.systemd1.Manager"
+			send_member="Clean" />
+
+	</policy>
+</busconfig>
 <!-- io.github.plrigaux.sysd-manager -->
