--- a/sysd-manager-proxy/Cargo.toml
+++ b/sysd-manager-proxy/Cargo.toml
@@ -21,6 +21,7 @@ name = "sysd-manager-proxy"
 path = "src/main.rs"
 
 [dependencies]
+clap.workspace = true
 constcat.workspace = true
 libc.workspace = true
 log.workspace = true
