--- a/sysd-manager-proxy/data/io.github.plrigaux.SysDManager.conf
+++ b/sysd-manager-proxy/data/io.github.plrigaux.SysDManager.conf
@@ -3,17 +3,19 @@
 Configuration 1.0//EN" "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
 	<policy context="default">
-		<allow own="org.zbus.MyGreeter" />
+		<allow own="io.github.plrigaux.SysDManager" />
 
 		<!--
-		<allow send_destination="org.zbus.MyGreeter"
-			send_interface="org.zbus.MyGreeter1"
-			send_member="SayHello"/>
+		<allow send_destination="io.github.plrigaux.SysDManager"
+			send_interface="io.github.plrigaux.SysDManager"
+			send_member="MyUserId"/>
 
 		
 -->
-		<allow send_destination="org.zbus.MyGreeter"
-			send_interface="org.zbus.MyGreeter1" />
+		<allow send_destination="io.github.plrigaux.SysDManager"
+			send_interface="io.github.plrigaux.SysDManager"
+			/>
+
 	</policy>
 
 	<policy context="default">
