--- a/sysd-manager-proxy/Cargo.toml
+++ b/sysd-manager-proxy/Cargo.toml
@@ -32,3 +32,4 @@ dotenv.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-journald.workspace = true
+zbus_polkit = "5"
