my first forward

--- a/sysd-manager-proxy/data/io.github.plrigaux.SysDManager.conf
+++ b/sysd-manager-proxy/data/io.github.plrigaux.SysDManager.conf
@@ -3,28 +3,7 @@
 Configuration 1.0//EN" "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
 	<policy context="default">
-		<allow own="io.github.plrigaux.SysDManager" />
-
-		<!--
-		<allow send_destination="io.github.plrigaux.SysDManager"
-			send_interface="io.github.plrigaux.SysDManager"
-			send_member="MyUserId"/>
-
-		
--->
-		<allow send_destination="io.github.plrigaux.SysDManager"
-			send_interface="io.github.plrigaux.SysDManager"
-			/>
-
+		<allow own="{BUS_NAME}"/>
+		<allow send_destination="{DESTINATION}" send_interface="{INTERFACE}"/>
 	</policy>
-
-	<policy context="default">
-		<allow own="org.freedesktop.systemd1" />
-
-		<allow send_destination="org.freedesktop.systemd1"
-			send_interface="org.freedesktop.systemd1.Manager"
-			send_member="Clean" />
-	</policy>
-
 </busconfig>
-<!-- io.github.plrigaux.sysd-manager -->
