--- a/sysd-manager-comcontroler/Cargo.toml
+++ b/sysd-manager-comcontroler/Cargo.toml
@@ -16,6 +16,7 @@ default = []
 flatpak = []
 
 [dependencies]
+base.workspace = true
 chrono.workspace = true
 enumflags2.workspace = true
 futures-util = "0.3"
