--- a/sysd-manager-base/Cargo.toml
+++ b/sysd-manager-base/Cargo.toml
@@ -8,3 +8,6 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+tracing.workspace = true
+tracing-subscriber.workspace = true
+tracing-journald.workspace = true
