--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -57,5 +57,7 @@ package() {
 	install -Dm644 "./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
 	install -Dm644 "./target/loc/io.github.plrigaux.sysd-manager.desktop" -t "$pkgdir/usr/share/applications"
 	install -Dm644 "./target/loc/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
+
+	#TODO install proxy
 	cp -r          "./target/locale" "$pkgdir/usr/share/" 
 }
