polkit chec permission

--- a/sysd-manager-proxy/Cargo.toml
+++ b/sysd-manager-proxy/Cargo.toml
@@ -33,6 +33,7 @@ tracing-subscriber.workspace = true
 tracing-journald.workspace = true
 zbus_polkit = "5"
 enumflags2.workspace = true
+futures-util = "0.3"
 
 [dev-dependencies]
 test-base.workspace = true
