--- a/sysd-manager-base/Cargo.toml
+++ b/sysd-manager-base/Cargo.toml
@@ -12,8 +12,10 @@ constcat.workspace = true
 gettext-rs.workspace = true
 glib.workspace = true
 libc.workspace = true
+serde.workspace = true
 strum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-journald.workspace = true
+zvariant.workspace = true
