--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -37,6 +37,8 @@ build() {
 	cd $_pkgsrcdir
 	export RUSTUP_TOOLCHAIN=stable
 	export CARGO_TARGET_DIR=target
+
+	cargo build --locked --release --features default --manifest-path ./sysd-manager-proxy/Cargo.toml
 	cargo build --locked --release --features default
 }
 
@@ -52,12 +54,20 @@ package() {
 	echo ""
 	cargo run -p transtools -- packfiles
 	echo ""
-	install -Dm755 "./target/release/sysd-manager" -t "$pkgdir/usr/bin"
-	install -Dm644 "./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg" -t "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
-	install -Dm644 "./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
-	install -Dm644 "./target/loc/io.github.plrigaux.sysd-manager.desktop" -t "$pkgdir/usr/share/applications"
-	install -Dm644 "./target/loc/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
+	install -vDm755 "./target/release/sysd-manager" -t "$pkgdir/usr/bin"
+	install -vDm644 "./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg" -t "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
+	install -vDm644 "./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
+	install -vDm644 "./target/loc/io.github.plrigaux.sysd-manager.desktop" -t "$pkgdir/usr/share/applications"
+	install -vDm644 "./target/loc/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
+	
+	cp -vr "./target/locale" "$pkgdir/usr/share/" 
 
-	#TODO install proxy
-	cp -r          "./target/locale" "$pkgdir/usr/share/" 
+	PROGRAM="${BBCYAN}SysD Manager${NC}"
+	echo -e Installing $PROGRAM Proxy  
+
+	sudo install -vDm755 "./target/release/sysd-manager-proxy" -t "$pkgdir/usr/bin"
+	echo -e Executing Install srcipt
+	/usr/bin/sysd-manager-proxy install
+
+	echo -e Installation of $PROGRAM completed, enjoy.
 }
