--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ path = "src/main.rs"
 
 [features]
 default = ["systemd/default"]
-flatpak = ["systemd/flatpak"]
+flatpak = ["systemd/flatpak", "sm-proxy/flatpak"]
 
 [profile.release]
 lto = true
@@ -72,8 +72,8 @@ zbus = { version = "5.11", default-features = false, features = [
 pango = { version = "0", package = "pango", features = ["v1_56"] }
 adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
 gio = { version = "0", package = "gio", features = ["v2_84"] }
-glib.workspace = true
 gtk = { version = "0.10", package = "gtk4", features = ["v4_20"] }
+glib.workspace = true
 
 base.workspace = true
 chrono.workspace = true
@@ -90,19 +90,23 @@ libc.workspace = true
 log.workspace = true
 regex.workspace = true
 serde.workspace = true
+sm-proxy = { version = "2.8", path = "./sysd-manager-proxy", package = "sysd-manager-proxy" }
 sourceview5 = "0.10"
-systemd = { version = "0.1.0", path = "./sysd-manager-comcontroler", package = "sysd-manager-comcontroler" , optional = true }
+systemd = { version = "0.1", path = "./sysd-manager-comcontroler", package = "sysd-manager-comcontroler" , optional = true }
 strum.workspace = true
 tokio.workspace = true
+tracing-journald.workspace = true
 tokio-util.workspace = true
+tracing-subscriber.workspace = true
+tracing.workspace = true
 toml = "0.9"
 zvariant.workspace = true
-tracing.workspace = true
-tracing-subscriber.workspace = true
-tracing-journald.workspace = true
 
 [dev-dependencies]
 test-base.workspace = true
+
+
+
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
