flatpack install and proxy

--- a/sysd-manager-base/Cargo.toml
+++ b/sysd-manager-base/Cargo.toml
@@ -7,6 +7,10 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[features]
+default = []
+flatpak = []
+
 [dependencies]
 constcat.workspace = true
 gettext-rs.workspace = true
