--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ path = "src/main.rs"
 
 [features]
 default = ["systemd/default"]
-flatpak = ["systemd/flatpak", "sm-proxy/flatpak"]
+flatpak = ["systemd/flatpak", "sm-proxy/flatpak", "base/flatpak"]
 
 [profile.release]
 lto = true
